--- a/docker/docker/Dockerfile
+++ b/docker/docker/Dockerfile
@@ -8,7 +8,7 @@ LABEL org.opencontainers.image.description="Claude Code Sandbox - Docker Image"
 LABEL org.opencontainers.image.licenses="MIT"
 
 # Install Docker CLI and Compose plugin (already root from base)
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN mkdir -p /var/lib/apt/lists/partial && apt-get update && apt-get install -y --no-install-recommends \
     apt-transport-https \
     && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
